Fixed alignment of title and description in TextBreak module on mobile

--- a/src/components/modules/TextBreak/styles.scss
+++ b/src/components/modules/TextBreak/styles.scss
@@ -48,7 +48,7 @@
 .description {
   @include type-body;
   @include grid-column(6);
-  margin: 0;
+  margin-top: 0;
 
   @include grid-media($grid-m) {
     @include grid-column(6);
